--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 spring:
   application:
-    name: dentravak
-#  cloud:
-#    consul:
+   name: dentravak
+  cloud:
+    consul:
+      host: 192.0.2.5
+
 #      discovery:
 #        instanceId: ${spring.application.name}:${random.value}
 #        healthCheckPath: /health-check
